# cms-bench

./: .gitignore  Cargo.toml  Dockerfile
benches/: transform.rs
crates/argyll-sys/: Cargo.toml  argyll_glue.c  build.rs
crates/skcms-sys/: Cargo.toml
profiles/corpus/: 敮啓srgb_12afb4d9.icc  34hc5cur_p_58272d66.icc  display_p3_03291993.icc  benq_rl2455_311ff0c7.icc  dell_p2722h_42536485.icc  244t_6-28-2010_1_e262e21b.icc  CORPUS.txt  Windows-HDR Calibrated Profile 1-26-2026 214047.icc  Windows-HDR Calibrated Profile 1-26-2026 214126.icc  Windows-HDR Calibrated Profile 1-27-2026 2756.icc  Windows-{6b922e74-48fc-5a5f-94cc-68fc8a91bda9}.icm  _72723b7f.icc  adobe_rgb_1998_0958d8ab.icc  adobe_rgb_1998_12484157.icc  adobe_rgb_1998_17354309.icc  adobe_rgb_1998_24b690fa.icc  adobe_rgb_1998_2f6457e2.icc  adobe_rgb_1998_481ca304.icc  adobe_rgb_1998_55079c02.icc  adobe_rgb_1998_8551730c.icc  adobe_rgb_1998_86828061.icc  adobe_rgb_1998_c7de586e.icc  adobe_rgb_1998_d904903e.icc  adobe_rgb_1998_f94e3409.icc  albook_2007_03_05_colorvision_f605b54b.icc  b_iec61966-2_1_15c6e2b8.icc  built-in_srgb_001c7ee7.icc  built-in_srgb_056b6825.icc  c2_59282c6a.icc  c2_7d61bdc0.icc  c2ci_88309750.icc  calibrated_gray_colorspace_397a83da.icc  calibrated_rgb_colorspace_13d00877.icc  calibrated_rgb_colorspace_21db99b5.icc  cie_rgb_3f62e157.icc  color_lcd_27a04a6f.icc  color_lcd_2957d174.icc  color_lcd_297cb556.icc  color_lcd_408a5b03.icc  color_lcd_4c593d96.icc  (+252 more)
profiles/matrix/: AdobeRGB1998-sys.icc  moxcms_bt.2020.icc
src/: lib.rs
tests/: accuracy.rs  corpus.rs  hdr_diagnostic.rs
(+2 files in other folders)
