[workspace]
resolver = "2"
members = ["crates/skcms-sys", "crates/argyll-sys"]

[package]
name = "cms-bench"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false
description = "Cross-CMS ICC profile transform benchmarks and accuracy comparison"

[dependencies]
moxcms = { version = "0.8.1", features = ["options"] }
lcms2 = "6"
skcms-sys = { path = "crates/skcms-sys" }
argyll-sys = { path = "crates/argyll-sys" }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
zenbench = "0.1.7"

[[bench]]
name = "transform"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
